add additional styling for homepage and first div, also create quiz.html file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         The Court Quiz <i class="fa-solid fa-crown"></i>
     </h1>
 
-    <div class="quiz-area">
-        <p>Placeholder Text <i class="fa-solid fa-star"></i></p>
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h2>Placeholder Text <i class="fa-solid fa-star"></i></h2>
+            <a href="/game.html" class="btn">Start Quiz</a>
+        </div>
     </div>
 </body>
 
