add text and styling to quiz.html file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h2>Placeholder Text <i class="fa-solid fa-star"></i></h2>
-            <a href="/game.html" class="btn">Start Quiz</a>
+            <a href="/quiz.html" class="btn">Start Quiz</a>
         </div>
     </div>
 </body>
