add start of JS script to JS file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- stylesheet and favicon -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="">
     <title>The Court Quiz</title>
 </head>
 <body>
@@ -18,7 +17,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h2>Placeholder Text <i class="fa-solid fa-star"></i></h2>
-            <a href="/quiz.html" class="btn">Start Quiz</a>
+            <a href="quiz.html" class="btn">Start Quiz</a>
         </div>
     </div>
 </body>
