--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div id="quiz-area" class="justify-center flex-column">
             <div id="hud">
-                <div id="question">Question 1</div>
+                <h2 id="question">Question 1</h2>
                 <div class="choice-container">
                     <p class="choice-prefix">A</p>
                     <p class="choice-text" data-number="1">Choice 1</p>
