add additional styling to quiz.html file, with changes to hud and question blocks

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <body>
     <h1 class="heading">
-        The Court Quiz <i class="fa-solid fa-crown"></i>
+        The Court Quiz
     </h1>
 
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h2>Placeholder Text <i class="fa-solid fa-star"></i></h2>
-            <a href="quiz.html" class="btn">Start Quiz</a>
+            <h2>How well do you know A Court of Thorns and Roses?</h2>
+            <a href="/quiz.html" class="btn">Start Quiz</a>
+            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
 </body>
