Add end html, css and js pages, add code/syntax and styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
 </body>
 
+<!-- Javascript file link -->
+<script src="assets/js/script.js"></script>
+<script src="assets/js/end.js"></script>
+<script src="assets/js/highscores.js"></script>
 <!-- font awesome icons script -->
 <script src="https://kit.fontawesome.com/640db9ef05.js" crossorigin="anonymous"></script>
 </html>
