--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- stylesheet and favicon -->
+    <!-- stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/quiz.css">
     <title>The Court Quiz</title>
@@ -50,6 +50,11 @@
             </div>
         </div>
     </div>
+    <!-- Javascript file link -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/end.js"></script>
+    <script src="assets/js/highscores.js"></script>
+    <!-- fontawesome icons script -->
+    <script src="https://kit.fontawesome.com/640db9ef05.js" crossorigin="anonymous"></script>
 </body>
 </html>
