--- a/end.html
+++ b/end.html
@@ -18,8 +18,8 @@
             <input type="text" name="name" id="username" placeholder="Enter your name">
             <button class="btn" id="saveScoreBtn" type="submit" onClick="saveHighScore(event)" disabled>Save</button>
         </form>
-        <a href="/quiz.html" class="btn">Play Again</a>
-        <a href="/index.html" class="btn">Go Home</a>
+        <a href="quiz.html" class="btn">Play Again</a>
+        <a href="index.html" class="btn">Go Home</a>
     </div>
 </div>
 
