--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h2>How well do you know A Court of Thorns and Roses?</h2>
-            <a href="/quiz.html" class="btn">Start Quiz</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="quiz.html" class="btn">Start Quiz</a>
+            <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
 </body>
