--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
         <form class="end-form-container">
             <h3 id="end-text">Enter your name below to save your score!</h3>
             <input type="text" name="name" id="username" placeholder="Enter your name">
-            <button class="btn" id="saveScoreBtn" type="submit" onClick="saveHighScore(event)" disabled>Save</button>
+            <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
         </form>
         <a href="quiz.html" class="btn">Play Again</a>
         <a href="index.html" class="btn">Go Home</a>
