combine css styling from 3 files into one

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 </body>
 
 <!-- Javascript file link -->
-<script src="assets/js/script.js"></script>
-<script src="assets/js/end.js"></script>
-<script src="assets/js/highscores.js"></script>
+<script src=""></script>
 <!-- font awesome icons script -->
 <script src="https://kit.fontawesome.com/640db9ef05.js" crossorigin="anonymous"></script>
 </html>
