--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,6 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/quiz.css">
     <title>The Court Quiz</title>
 </head>
 <body>
@@ -51,9 +50,7 @@
         </div>
     </div>
     <!-- Javascript file link -->
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/end.js"></script>
-    <script src="assets/js/highscores.js"></script>
+    <script src="assets/js/quiz.js"></script>
     <!-- fontawesome icons script -->
     <script src="https://kit.fontawesome.com/640db9ef05.js" crossorigin="anonymous"></script>
 </body>
