--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- stylesheet and favicon -->
+    <!-- stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The Court Quiz</title>
 </head>
@@ -23,8 +23,4 @@
     </div>
 </body>
 
-<!-- Javascript file link -->
-<script src=""></script>
-<!-- font awesome icons script -->
-<script src="https://kit.fontawesome.com/640db9ef05.js" crossorigin="anonymous"></script>
 </html>
