adjust Go Home button functionality on end page

--- a/end.html
+++ b/end.html
@@ -19,7 +19,7 @@
             <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
         </form>
         <a href="quiz.html" class="btn">Play Again</a>
-        <a href="index.html" class="btn" id="homebtn" onclick="homeBtn()">Go Home</a>
+        <a href="#" class="btn" id="homebtn" onclick="homeBtn()">Go Home</a>
     </div>
 </div>
 
