Change of div to section on index.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         The Court Quiz
     </h1>
 
-    <div class="container">
+    <section class="container">
         <div id="home" class="flex-column flex-center">
             <h2>How well do you know A Court of Thorns and Roses?</h2>
             <a href="quiz.html" class="btn">Start Quiz</a>
             <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
