Add instructions.html file to repo, buttons update on index.html to include how to play

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     <section class="container">
         <div id="home" class="flex-column flex-center">
-            <h2>How well do you know A Court of Thorns and Roses?</h2>
+            <h2>So you think you know A Court of Thorns and Roses?</h2>
+            <h3>Test your knowledge with this quiz.</h3>
             <a href="quiz.html" class="btn">Start Quiz</a>
+            <a href="instructions.html" class="btn">How to Play</a>
             <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </section>
