--- a/instructions.html
+++ b/instructions.html
@@ -11,13 +11,21 @@
 </head>
 <body>
     <h1>
-        How to Play
+        The Court Quiz
     </h1>
 
     <article>
+        <h2>How to Play:</h2>
         <ul>
-            <li></li>
+            <li>When you click on "Start Quiz", you will be shown a question with 4 possible answers.</li>
+            <li>Please select one answer from the four options.</li>
+            <li>If you get the answer correct, it will turn green.</li>
+            <li>If you get the answer wrong, it will turn red.</li>
+            <li>The quiz will then move onto the next question.</li>
+            <li>There is a maximum of 10 questions and you will receive 100 points for each correct answer.</li>
+            <li>At the end of the quiz, you will be shown your score with the option to enter your name for it to be added to the leaderboard.</li>
         </ul>
+        <p>Thank you so much for playing "The Court Quiz!"</p>
     </article>
 </body>
 </html>
