--- a/instructions.html
+++ b/instructions.html
@@ -14,7 +14,7 @@
         The Court Quiz
     </h1>
 
-    <article>
+    <article class="container">
         <h2>How to Play:</h2>
         <ul>
             <li>When you click on "Start Quiz", you will be shown a question with 4 possible answers.</li>
