Adjust height of text content on instructions and index pages

--- a/instructions.html
+++ b/instructions.html
@@ -27,5 +27,9 @@
         </ul>
         <p>Thank you so much for playing "The Court Quiz!"</p>
     </article>
+
+    <div class="flex-center flex-column">
+    <a href="index.html" class="btn">Go Home</a>
+    </div>
 </body>
 </html>
