--- a/instructions.html
+++ b/instructions.html
@@ -31,5 +31,7 @@
     <div class="flex-center flex-column">
     <a href="index.html" class="btn">Go Home</a>
     </div>
+    <!-- Javascript file link -->
+    <script src="assets/js/instructions.js"></script>
 </body>
 </html>
