font styling adjustment on how to play overlay

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <li>There is a maximum of 10 questions and you will receive 100 points for each correct answer.</li>
             <li>At the end of the quiz, you will be shown your score with the option to enter your name for it to be added to the leaderboard.</li>
         </ul>
-        <p>Thank you so much for playing "The Court Quiz!"</p>
+        <p>Thank you so much for playing "The Court Quiz"!</p>
+        <p>Click anywhere on this box to close it.</p>
     </article>
     <!-- Javascript file link -->
     <script src="assets/js/instructions.js"></script> 
