add js functionality to Start Quiz button for mouse hover over effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="home" class="flex-column flex-center">
             <h2>So you think you know A Court of Thorns and Roses?</h2>
             <h3>Test your knowledge with this quiz.</h3>
-            <a href="quiz.html" class="btn">Start Quiz</a>
+            <a href="quiz.html" onmouseover="start(this)" onmouseout="nostart(this)" class="btn">Start Quiz</a>
             <button class="btn" onclick="on()">How to Play</button>
             <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
