Add transparent box beneath writing on all pages to help text stand out from background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         The Court Quiz
     </h1>
 
-    <section class="container">
+    <section class="container intro-div">
         <div id="home" class="flex-column flex-center">
             <h2>So you think you know A Court of Thorns and Roses?</h2>
             <h3>Test your knowledge with this quiz.</h3>
