adjust styling on leaderboard page and change of class name for bg overlay behind text

--- a/end.html
+++ b/end.html
@@ -10,7 +10,7 @@
     <title>The Court Quiz</title>
 </head>
 <body>
-<div class="container quiz-end-div">
+<div class="container bg-div">
     <div id="end" class="flex-center flex-column">
         <h2 id="finalScore">0</h2>
         <form class="end-form-container">
