--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     <title>The Court Quiz</title>
 </head>
 <body>
-    <div class="container quiz-end-div">
+    <div class="container bg-div">
         <div id="quiz" class="justify-center flex-column">
             <div id="hud">
                 <div class="hud-item">
