--- a/highscores.html
+++ b/highscores.html
@@ -10,7 +10,7 @@
     <title>The Court Quiz</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container bg-div">
         <div id="highScores" class="flex-center flex-column">
             <h2 id="finalScore">Leaderboard</h2>
             <ul id="highScoresList"></ul>
